# CMakeList.txt: проект CMake для Block2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("runUnitTests")
set(CMAKE_CXX_STANDARD 20) 
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++2a")

# Добавьте источник в исполняемый файл этого проекта.

include(GoogleTest)

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
enable_testing()

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
FetchContent_MakeAvailable(googletest)

add_executable(runUnitTests test.cpp freq_dict.h freq_dict.cpp parser.h parser.cpp )

#if (CMAKE_VERSION VERSION_GREATER 3.12)
  #set_property(TARGET runUnitTests PROPERTY CXX_STANDARD 20)
#endif()

target_link_libraries(runUnitTests GTest::gtest_main)